<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_addMeal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#F0F4F8"
    tools:context=".ui.addmeal.AddMealFragment">

    <EditText
        android:id="@+id/form_edit"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_edit_bg_round"
        android:hint="@string/enter_menu"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#A6BCD0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/form_save"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:backgroundTint="#41D359"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_ratingBar" />

    <RatingBar
        android:id="@+id/form_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:numStars="4"
        android:stepSize="1"
        app:layout_constraintBottom_toTopOf="@+id/form_save"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/check_meat"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/meat"
        android:textColor="#748A9D"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/check_veggie"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/vegetarian"
        android:textColor="#748A9D"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_special" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/check_special"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/special"
        android:textColor="#748A9D"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_meat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/meal_name"
        android:textColor="#748A9D"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/form_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/meal_category"
        android:textColor="#748A9D"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_edit" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/meal_rating"
        android:textColor="#748A9D"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_veggie"
        app:layout_constraintBottom_toTopOf="@+id/form_ratingBar"/>


</androidx.constraintlayout.widget.ConstraintLayout>