<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/language"
        android:title="@string/changeLanguage"
        android:icon="@drawable/ic_round_language_24"
        app:showAsAction="always"
        android:visible="true"/>

</menu>